# whysc

./: .gitignore  2  :w  CMakeLists.txt  CubeModel.h  README.md  hex_model2.vtu  hex_test.txt  init_mesh.vtu  init_quad_mesh.vtu  init_tet_mesh.vtu  init_tri_mesh.vtu  plan.md  quad_model2.vtu  quad_test.txt  test.py  test_hex_0.vtu  test_quad_0.vtu  tet_model2.vtu  tet_test.txt  tri_model2.vtu  tri_test.txt
data/: test.off
docs/: index.md  scaled_monomial_space.md
example/: CMakeLists.txt  CSRMatrix_test.cpp  CubeAndSphere_test.cpp  Cube_test.cpp  DataArray_test.cpp  HexJacobiQuality_test.cpp  IntervalMesh_test.cpp  MeshGeometry_test.cpp  PolyhedronModel_test.cpp  QuadJacobiQuality_test.cpp  QuadMesh_test.cpp  RectangleWithHole_test.cpp  TetRadiusRatioQuality_test.cpp  TetrahedronMesh_test.cpp  TriRadiusRatioQuality_test.cpp  TriangleMesh_test.cpp  cgal_mesh_tetmesh.cpp  cgal_remesh_test.cpp  cgal_surface_mesh_generation.cpp  cgal_volume_mesh_generation.cpp  color_test.cpp  eigtest.cpp  halfedge_mesh_test.cpp  hexmesh_test.cpp  house_test.cpp  laplace2d_test.cpp  map_test.cpp  parallel_coloring.cpp  parallel_coloring_test.cpp  parallel_hexmesh_optimization.cpp  parallel_hexmesh_optimization0.cpp  parallel_optimization.cpp  parallel_quadmesh_optimization.cpp  parallel_quadmesh_optimization0.cpp  parallel_tetmesh_optimization.cpp  parallel_tetmesh_optimization0.cpp  parallel_trimesh_optimization.cpp  parallel_trimesh_optimization0.cpp  plot.py  pmesh_generation.cpp  (+6 more)
include/algebra/: Algebra_kernel.h  CSRMatrix.h  Eigenvalue.h  Matrix.h  MatrixFactory.h  Matrix_1d.h  Vector.h  linalg.h
include/functionspace/: ScaledMonomialSpace2d.h
include/geometry/: Bisection_alg.h  C6.h  C6H6.h  CubeAndSphereModel.h  CubeModel.h  CubeWithSpheresModel.h  CubeWithSpheresModelHexMesh.h  GObject.h  Geometry_kernel.h  Level_set_function.h  Operator.h  Origin.h  PPoint.h  PVector.h  Point_2.h  Point_3.h  PolyhedronModel.h  RectangleWithHole.h  RectangleWithTwoHoles.h  SphereModel.h  Vector_2.h  Vector_3.h
include/mesh/: Algorithm.h  BaseObjectFunction.h  CGALMesher_2.h  CellQualityBase.h  Cell_type.h  Communication.h  ComponentDataArray.h  DataArray.h  DataArrayBase.h  GMesher.h  GhostFillingAlg.h  HalfEdgeMesh.h  HexJacobiQuality.h  HexJacobiQualityFunction.h  HexPositiveJacobiQuality.h  Hexahedron.h  HexahedronMesh.h  IntervalMesh.h  MaxNodePatchObjectFunction.h  Mesh.h  MeshData.h  MeshFactory.h  MeshGeometry.h  MeshToplogy.h  MixNodePatchObjectFunction.h  Node.h  NodeData.h  NodePatchObjectFunctionBase.h  NodePatchOptAlg.h  OffsetDataArray.h  OptimizationAlg.h  ParallelMesh.h  ParallelMeshColoringAlg.h  ParallelMeshNew.h  ParallelMeshOptAlg.h  ParallelMeshOptimization.h  ParallelMesher.h  PatchOptimization.h  PolygonMesh.h  PythonApi.h  (+24 more)
include/mesh/old/: Hexahedron.cpp  Hexahedron.h  QuadJacobiPositiveQuality.h  QuadJacobiQuality.h  TetRadiusRatioQuality.h  Tetrahedron.cpp  Tetrahedron.h
include/quadrature/: GaussLegendreQuadrature.h  GaussLegendreQuadratureData.h  PolygonMeshIntegralAlg.h  QuadratureBase.h  TetrahedronQuadrature.h  TetrahedronQuadratureData.h  TriangleQuadrature.h  TriangleQuadratureData.h
test/: CMakeLists.txt  CSRMatrix_test.cpp  Cube_test.cpp  DataArray_test.cpp  Matrix_test.cpp  PolyhedronModel_test.cpp  TestMacro.h  TestMacro.h.in  TetrahedronMesh_test.cpp  TriangleMesh_test.cpp  cgal_mesh_tetmesh.cpp  cgal_remesh_test.cpp  cgal_surface_mesh_generation.cpp  cgal_volume_mesh_generation.cpp  color_test.cpp  halfedge_mesh_test.cpp  heart_plot_test.cpp  hexmesh_test.cpp  json_test.cpp  laplace_test.cpp  matplotlib_test.cpp  mpi_surface_mesh_coloring.cpp  mpi_test.cpp  parallel_coloring.cpp  parallel_coloring_test.cpp  parallel_optimization.cpp  plot.py  pmesh_generation.cpp  qr_test.cpp  quiver.cpp  random_test.cpp  surface_generation.cpp  test_GaussLegendreQuadrature.cpp  test_InitTop.cpp  test_Mesh.cpp  test_ScaledMonomialSpace2d.cpp  test_TetrahedronQuadrature.cpp  test_TriangleMesh.cpp  test_TriangleQuadrature.cpp  txt_to_off_test.cpp
test/cpp/: CMakeLists.txt  pure_virtual_function.cpp
